# PCS-2026

esercitazione1/: CMakeLists.txt  medie  medie_es1.cpp  parametri_es1.cpp  prog
esercitazione1/build_es1/: CMakeCache.txt  Makefile  cmake_install.cmake  medie_cmake
esercitazione10/: CMakeLists.txt  gradiente_coniugato.cpp  gradiente_coniugato.hpp
esercitazione11/: CMakeLists.txt  de_pina.hpp  finding_path.hpp  header_es9.hpp  main_es11.cpp
esercitazione2/: CMakeLists.txt  es2  esercitazione2_fig1.cpp  esercitazione2_primialgoritmi.cpp  prog
esercitazione2/build_es2/: CMakeCache.txt  Makefile  cmake_install.cmake  es2_cmake
esercitazione3/: CMakeLists.txt  es3  es3.cpp  header_es3.hpp
esercitazione4/: CMakeLists.txt  alg_sort.hpp  test_bubblesort.cpp  test_insertionsort.cpp  test_selectionsort.cpp
esercitazione5/: CMakeLists.txt  alg_sort.hpp  confronto_algoritmi.cpp  data_release.txt  dati_debug2.txt  is_sorted.hpp  osservazioni_es5.txt  test_bubblesort.cpp  test_insertionsort.cpp  test_mergesort.cpp  test_quicksort.cpp  test_selectionsort.cpp
esercitazione8/: CMakeLists.txt  header_es6.hpp  test_addedge.cpp  test_allnodes_alledges.cpp  test_archi.cpp  test_costruttori.cpp  test_differenza.cpp  test_edgenumber_edgeat.cpp  test_neighbors.cpp
esercitazione9/: CMakeLists.txt  bfs.dot  dfs.dot  dijkstra.dot  grafo.dot  header_es9.hpp  main_es9.cpp  rdfs.dot
progettoPCS2026/: CMakeLists.txt  adapter_REBECCA.hpp  circuito.hpp  gradiente_coniugato_MAVI.hpp  grafi_CHIARA.hpp  maglie_MAVI.hpp  main_PROJECT.cpp  netlist.hpp  netlist.txt  netlist_grande.txt  netlist_prova.txt  netlist_very_big.txt  sistema_lineare.hpp
